LanguageTool Change Log

2.9 (release planned for 2015-03-30)

-English:
    -Added many new style rules contributed by Heikki Lehvaslaiho. As these
     may cause false alarms, they are not activated by default. You can
     activate them by turning on all rules in the new 'Plain English' category.

-German:
    -added a few new rules

-API:
    -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.

-Internal:
    -We have switched from Apache Tika to language-detector
     (https://github.com/optimaize/language-detector) for automatically
     identifying the text language. It should be faster and results
     should be more reliable.
     Detection of Asturian and Galician had to be disabled because the
     detection quality was too low and also affected detection of Spanish.


2.8 (2014-12-30)

-Asturian:
    -removed dependency on Hunspell, now uses Morfologik for spell checking

-Breton:
    -added and improved a few rules

-Catalan:
    -updated dictionary
    -added and improved rules
    -fixed false alarms

-Dutch:
    -added and improved many rules

-English:
    -some new rules (thanks to Nick Hough)
    -updated the tagger and synthesizer dictionaries, fixing issue #202
    -new filter to be used for matching the part-of-speech of parts of words, e.g.:
         <pattern>
             <token regexp="yes">in.*</token>
         </pattern>
         <filter class="org.languagetool.rules.en.EnglishPartialPosTagFilter"
                 args="no:1 regexp:in(.*) postag_regexp:JJ"/>
     This will only keep matches for words that start with 'in' and where the
     part after the 'in' is an adjective (POS tag 'JJ'). The 'no:1' is the token
     position, i.e. here the first (and only) matching <token> is referred to.

-French:
    -added and improved a few rules

-German:
    -added and improved a few rules

-Polish:
    -added and improved several rules
    -added and improved false friends with English

-Portuguese: