@@ -324,7 +324,39 @@ $Id$
             <example type="incorrect"><marker>заранее предупредить</marker></example>
             <example type="correct">предупредить</example>
         </rule>
-        
+         <rule id="Tavtology_zaranee_predchuvstvovat" name="Тавтология «заранее предчувствовать»">
+            <pattern>
+                <token inflected="yes">заранее</token>
+                <token inflected="yes">предчувствовать</token>
+            </pattern>
+            <message>Языковая избыточность: <suggestion>\2</suggestion>?</message>
+            <url>http://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D0%B2%D1%82%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F_%28%D1%80%D0%B8%D1%82%D0%BE%D1%80%D0%B8%D0%BA%D0%B0%29</url>
+            <short>Тавтология.</short>
+            <example type="incorrect"><marker>заранее предчувствовать</marker></example>
+            <example type="correct">предчувствовать</example>
+        </rule>
+        <rule id="Tavtology_prejskurant_cen" name="Тавтология «прейскурант цен»">
+            <pattern>
+                <token inflected="yes">прейскурант</token>
+                <token inflected="yes">цена</token>
+            </pattern>
+            <message>Языковая избыточность: <suggestion>\1</suggestion>?</message>
+            <url>http://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D0%B2%D1%82%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F_%28%D1%80%D0%B8%D1%82%D0%BE%D1%80%D0%B8%D0%BA%D0%B0%29</url>
+            <short>Тавтология.</short>
+            <example type="incorrect"><marker>прейскурант цен</marker></example>
+            <example type="correct">прейскурант</example>
+        </rule> 
+        <rule id="Tavtology_vremenno_priostanovlen" name="Тавтология «временно приостановить»">
+            <pattern>
+                <token inflected="yes">временно</token>
+                <token inflected="yes">приостановить</token>
+            </pattern>
+            <message>Языковая избыточность: <suggestion>\2</suggestion>?</message>
+            <url>http://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D0%B2%D1%82%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F_%28%D1%80%D0%B8%D1%82%D0%BE%D1%80%D0%B8%D0%BA%D0%B0%29</url>
+            <short>Тавтология.</short>
+            <example type="incorrect"><marker>временно приостановлены</marker></example>
+            <example type="correct">приостановлены</example>
+        </rule>     
          <rule id="Tavtology_mahina" name="Тавтология «огромная махина»">
             <pattern>
                 <token inflected="yes" regexp="yes">большой|огромный|гигантский</token>
