@@ -10,6 +10,9 @@ LanguageTool Change Log
 -German:
     -added a few new rules
 
+-Russian:
+    -added a few new rules
+
 -API:
     -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
 
